============================== Next release ==============================

  new data (thanks to Juan I. Larruquert for providing numerical data!)
    main/CeF3/Rodriguez-de Marcos.yml
    main/LaF3/Rodriguez-de Marcos.yml
    main/MgF2/Rodriguez-de Marcos.yml
  new data (thanks to Valkai Sándor!)
    other/resists/Microchem SU-8 2000.yml
    other/resists/Microchem SU-8 3000.yml


============================== 2018-02-10 ==============================

  !!! update of database structure !!! 
    added "info" - optional additional information that can be associated with shelves, books and pages
    informatin is stored in .html files located in the '/info' folder
    "info" key is used in the 'library.yml' for specifying the path to the corresponding .html file
    data files ('.yml') are moved from '/' to '/data' folder
    "path" key is replaced by "data" in 'library.yml'
    "INFO" key is replaced by "SPECS" in data files
  new/updated data
    glass/cdgm/* - updated to the latest zemax catalog
    glass/sumita/* - updated to the latest zemax catalog
    glass/hoya/* - updated to the latest zemax catalog
    glass/schott/* - updated to the latest zemax catalog
    glass/ohara/* - updated to the latest zemax catalog
    glass/hikari/* - updated to the latest zemax catalog
  updated data (thanks to Hui Zhang, Pekin University, China, for providing numerical data in YAML format!)
    main/MoS2/Zhang.yml
  bug fixes
    main/MoO3/Vos.yml: references
    main/MoS2/Yim-1.99um.yml: references
    main/MoS2/Yim-3.01um.yml: references
    main/MoS2/Yim-19.88um.yml: references
    main/MoS2/Beal.yml: references
    main/MoSe2/Beal.yml: references
    main/MoTe2/Beal.yml: references
  updated data (thanks to Heinrich Grabmayr, Ludwig Maximilian University of Munich, Germany, for finding a bug in a formula)
    main/YVO4/Shi-o.yml: fixed formuls, renamed to Shi-o-20C
    main/YVO4/Shi-e.yml: renamed to Shi-e-20C
  new data
    main/H2O/Segelstein.yml